--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ Flask-Cors==3.0.4
 Jinja2==2.10     
 pip==10.0.1   
 requests==2.18.4    
+gunicorn==19.8.1
+distribute==0.6.24
+Werkzeug==0.8.3
+certifi==0.0.8
+chardet==1.0.1
